--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <button class="first">Rock</button>
+    <button class="second">Paper</button>
+    <button class="third">Scissor</button>
+    <div class="score"></div>
+    <div class="result"></div>
 </body>
 </html>
